Fix overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background-color: #113f67;
   color: white;
 }
@@ -33,4 +33,7 @@ body {
   background-color: #a2a8d3;
 }
 
-
+.content {
+  height: calc(100% - 64px);
+  width: 100%;
+}
